--- a/index.html
+++ b/index.html
@@ -21,9 +21,13 @@
       <div class="row">
         <button onclick="playPause()">Play / Pause</button>
       </div>
-    <div class="row">
-        <p>If the tempo is changed while playing sound, please pause and then play again.</p>
-    </div>
+      <div class="row">
+        <p>
+          If the tempo is changed while playing sound, please pause and then
+          play again.
+        </p>
+        <p>See the <a href="https://github.com/kaczmarj/metronome" target="_blank">source code on GitHub</a>.</p>
+      </div>
     </div>
     <script>
       var beepDuration = 0.15; // seconds
