--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <input type="number" name="tempo" id="tempoInput" value="120" />
       </div>
       <div class="row">
-        <button onclick="playPause()">Play / Pause</button>
+        <button onclick="playPause()" class="btn btn-primary">
+          Play / Pause
+        </button>
       </div>
       <div class="row">
         <p>
@@ -38,12 +40,6 @@
       var beepDuration = 0.15; // seconds
       var beepIntervalId = null;
       var isPlaying = false;
-
-      // for iphone compatibility
-      var touchEvent = "ontouchstart" in window ? "touchstart" : "click";
-      document
-        .getElementById("tempoInput")
-        .addEventListener(touchEvent, playPause());
 
       // https://developer.mozilla.org/en-US/docs/Web/API/OscillatorNode/detune
       // https://stackoverflow.com/a/41077092/5666087
